--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
-    "@mui/material": "^5.16.5",
+    "@mui/material": "^5.16.6",
     "@mui/x-data-grid": "^7.11.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "6pp": "^1.2.16",
+    "axios": "^1.7.4",
     "chart.js": "^4.4.2",
     "framer-motion": "^11.3.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^2.0.4",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.23.0"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
